[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bloodbash"
version = "1.3.1"
description = "SharpHound & AzureHound offline analyzer: finds AD/Azure attack paths and misconfigurations"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "networkx>=3.0",
    "rich>=13.0",
    "tqdm>=4.0",
    "pyyaml",
]

[project.scripts]
bloodbash = "BloodBash:main"

[tool.setuptools]
py-modules = ["BloodBash"]
